--- a/src/components/Weather.css
+++ b/src/components/Weather.css
@@ -1,24 +1,24 @@
-.weather{
-    place-self: center;
-    padding: 40px;
-    border-radius: 10px;
-    background-image: url(/pexels-oandremoura-29093038.jpg), linear-gradient(45deg, #253d7a, #0e0325) ;
-    backdrop-filter: blur(80px);
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-   
+.weather {
+  place-self: center;
+  padding: 40px;
+  border-radius: 10px;
+  background-image: url(/pexels-oandremoura-29093038.jpg),
+    linear-gradient(45deg, #253d7a, #0e0325);
+  backdrop-filter: blur(80px);
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.search-bar{
-    display: flex;
-    align-items: center;
-    gap: 12px;
+.search-bar {
+  display: flex;
+  align-items: center;
+  gap: 12px;
 }
 
-.search-bar input{
+.search-bar input {
   height: 50px;
   border: none;
   outline: none;
@@ -29,80 +29,76 @@
   font-size: 18px;
 }
 
-.search-bar img{
-    width: 50px;
-    padding: 15px;
-    border-radius: 50%;
-    background: #ebfffc;
-    cursor: pointer;
+.search-bar img {
+  width: 50px;
+  padding: 15px;
+  border-radius: 50%;
+  background: #ebfffc;
+  cursor: pointer;
 }
 
-.weather-icon{
+.weather-icon {
   width: 150px;
   margin: 30px 0;
 }
 
-.temperature{
-    color: #fff;
-    font-size: 80px;
-    line-height: 1;
+.temperature {
+  color: #fff;
+  font-size: 80px;
+  line-height: 1;
 }
 
-.location{
-    color: #fff;
-    font-size: 40px;
+.location {
+  color: #fff;
+  font-size: 40px;
 }
 
-.weather-data{
-    width: 100%;
-    margin-top: 40px;
-    color: #fff;
-    display: flex;
-    justify-content: space-between;
+.weather-data {
+  width: 100%;
+  margin-top: 40px;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
 }
 
-.weather-data .col{
-    display: flex;
-    align-items: flex-start;
-    gap: 12px;
-    font-size: 20px;
+.weather-data .col {
+  display: flex;
+  align-items: flex-start;
+  gap: 12px;
+  font-size: 20px;
 }
 
-.weather-data .col span{
-    display: block;
-    font-size: 16px;
-}
-
-.weather-data .col img{
-    width: 26px;
-    margin-top: 10px;
-}
-
-
-@media (max-width: 480px) {
-    .weather{
-        width: 340px;
-    }
-
-    .search-bar input{
-  height: 50px;
-  
+.weather-data .col span {
+  display: block;
   font-size: 16px;
 }
 
-.location{
-    color: #fff;
-    font-size: 30px;
+.weather-data .col img {
+  width: 26px;
+  margin-top: 10px;
 }
 
-.search-bar{
+@media (max-width: 480px) {
+  .weather {
+    width: 340px;
+  }
+
+  .search-bar input {
+    height: 50px;
+
+    font-size: 16px;
+  }
+
+  .location {
+    color: #fff;
+    font-size: 30px;
+  }
+
+  .search-bar {
     display: flex;
     align-items: center;
     gap: 12px;
-    margin-left: 40px;
-    margin-right: 40px;
-    
-    
-}
-
+    width: 100%;
+    margin: 0 auto;
+  }
 }
