--- a/src/components/Weather.css
+++ b/src/components/Weather.css
@@ -85,7 +85,7 @@
 
   .search-bar input {
     height: 50px;
-
+    width: 200px;
     font-size: 16px;
   }
 
@@ -97,8 +97,9 @@
   .search-bar {
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 12px;
-    width: 90%;
-    margin: 0 auto;
+    margin-left: 20px;
+    margin-right: 20px;
   }
 }
